kubernetes-deployment-files/cardcostapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cardcostapi
  namespace: cardcostapi
  labels:
    app: cardcostapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cardcostapi
  template:
    metadata:
      labels:
        app: cardcostapi
    spec:
      containers:
        - name: cardcostapi
          image: pavloskkr/cardcostapi:latest
          ports:
            - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: cardcostapi
  namespace: cardcostapi
spec:
  selector:
    app: cardcostapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8090
